buttons and headings background

--- a/HTML/index.HTML
+++ b/HTML/index.HTML
@@ -12,6 +12,6 @@
         <a href="">About</a>
         <a href="">Contact</a>
     </div>
-    <h1>home</h1>
+    <h2>Home Page</h2>
 </body>
 </html>
