--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+    <title>Laravel</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    
+    <div class="Navbar">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
+    </div>
+    <h1>Home</h1>
+
+    <div class="box">
+        <img src="" alt="">
+    </div>
 </body>
 </html>
