buttons done & image done box no

--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laravel</title>
     <link rel="stylesheet" href="/style.css">
 </head>
+
 <body>
     <div class="Navbar">
         <a href="">Home</a>
         <a href="">About</a>
         <a href="">Contact</a>
     </div>
-    <h1>Home</h1>
 
-    <div class="box">
-        img
-    </div>
+
+
+    <img src="/images/image (1).jpg" alt="YES" class="box">
+    <img src="/images/image (2).jpg" alt="YES" class="box">
+    <img src="/images/image (3).jpg" alt="YES" class="box">
+    <img src="/images/image (4).jpg" alt="YES" class="box">
+    <img src="/images/image (5).jpg" alt="YES" class="box">
+    <img src="/images/image (6).jpg" alt="YES" class="box">
+
+
+    <h1>Home</h1>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+        impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
+        aspernatur quisquam dolor obcaecati, aut saepe hic? Quas impedit quisquam iure molestiae dignissimos aut quae
+        provident deleniti nostrum perspiciatis blanditiis, iste molestias eligendi voluptatum aliquid!
+    </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+        impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
+        aspernatur quisquam dolor obcaecati, aut saepe hic? Quas impedit quisquam iure molestiae dignissimos aut quae
+        provident deleniti nostrum perspiciatis blanditiis, iste molestias eligendi voluptatum aliquid!</p>
+
+
 </body>
+
 </html>
