all done but box no

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
         <a href="">About</a>
         <a href="">Contact</a>
     </div>
-
-
-
+<br>
     <img src="/images/image (1).jpg" alt="YES" class="box">
     <img src="/images/image (2).jpg" alt="YES" class="box">
     <img src="/images/image (3).jpg" alt="YES" class="box">
@@ -25,16 +23,15 @@
     <img src="/images/image (6).jpg" alt="YES" class="box">
 
 
-    <h1>Home</h1>
-    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+    <!-- <h1>Home</h1> -->
+    <div class="text">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
         impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
-        aspernatur quisquam dolor obcaecati, aut saepe hic? Quas impedit quisquam iure molestiae dignissimos aut quae
-        provident deleniti nostrum perspiciatis blanditiis, iste molestias eligendi voluptatum aliquid!
-    </p>
+        aspernatur quisquam dolor obcaecati, aut saepe hic? 
+    </div>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
         impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
-        aspernatur quisquam dolor obcaecati, aut saepe hic? Quas impedit quisquam iure molestiae dignissimos aut quae
-        provident deleniti nostrum perspiciatis blanditiis, iste molestias eligendi voluptatum aliquid!</p>
+        aspernatur quisquam dolor obcaecati, aut saepe hic? </p>
 
 
 </body>
