--- a/index.html
+++ b/index.html
@@ -23,16 +23,22 @@
     <img src="/images/image (6).jpg" alt="YES" class="box">
 
 
-    <!-- <h1>Home</h1> -->
-    <div class="text">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
-        impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
-        aspernatur quisquam dolor obcaecati, aut saepe hic? 
-    </div>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+    <h1>Home</h1>
+    <div class="box">
+        <p class="text1">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+            impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
+            aspernatur quisquam dolor obcaecati, aut saepe hic? 
+    </p>
+            
+    <p class="text2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
         impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
         aspernatur quisquam dolor obcaecati, aut saepe hic? </p>
 
+        <p class="text3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+            impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
+            aspernatur quisquam dolor obcaecati, aut saepe hic? </p>
+    </div>
 
 </body>
 
