--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <h1>Home</h1>
-    <div class="box">
+    <div class="box1">
         <p class="text1">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
             impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
