--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="">About</a>
         <a href="">Contact</a>
     </div>
-<br>
+    <br>
     <img src="/images/image (1).jpg" alt="YES" class="box">
     <img src="/images/image (2).jpg" alt="YES" class="box">
     <img src="/images/image (3).jpg" alt="YES" class="box">
@@ -26,20 +26,25 @@
     <h1>Home</h1>
     <div class="box1">
         <p class="text1">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et
+            maiores
             impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
-            aspernatur quisquam dolor obcaecati, aut saepe hic? 
-    </p>
-            
-    <p class="text2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
-        impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
-        aspernatur quisquam dolor obcaecati, aut saepe hic? </p>
+            aspernatur quisquam dolor obcaecati, aut saepe hic?
+        </p>
 
-        <p class="text3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga neque et maiores
+        <p class="text2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga
+            neque et maiores
+            impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
+            aspernatur quisquam dolor obcaecati, aut saepe hic? </p>
+
+        <p class="text3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil accusantium similique ex fuga
+            neque et maiores
             impedit qui rerum doloribus, harum eaque? Esse delectus laboriosam nihil iusto cupiditate ratione voluptate
             aspernatur quisquam dolor obcaecati, aut saepe hic? </p>
     </div>
-
+    <header>
+        <img src="/images/logo.png" alt="Logo" class="logo">
+    </header>
 </body>
 
 </html>
