--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="/images/image (5).jpg" alt="YES" class="box">
     <img src="/images/image (6).jpg" alt="YES" class="box">
 
-    
+
     <h1>Home</h1>
     <div class="box1">
         <p class="text1">
@@ -45,6 +45,12 @@
     <header>
         <img src="/images/logo.png" alt="Logo" class="logo">
     </header>
+    <footer class="footer">
+        <p>© 2020 Company, Inc. · <a href="/privacy_file.html">Privacy</a> · <a href="/Terms_blade.html">Terms</a></p>
+    </footer>
+
+
+
 </body>
 
 </html>
